--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 </head>
 <body>
     <div class="Navbar">
-        <a href=""><img src="img/default-avatar-icon-of-social-media-user-vector.jpg" alt=""></a>
-        <div class="profile">
-            
+        <div class="Profile">
+            <a href=""><img src="img/default-avatar-icon-of-social-media-user-vector.jpg" alt=""></a>
+            <ul>
+                <li>
+                    Name:
+                </li>
+                <li>
+                    Level:
+                </li>
+            </ul>
         </div>
         <div class="menunav">
             <a href="">Home</a>
