--- a/register.html
+++ b/register.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Login Page</h1>
+    <h1>Register page</h1>
 
-    <form id="loginForm">
+    <form id="registerForm">
         <input type="text" id="username" placeholder="enter username">
         <input type="password" id="password" placeholder="Enter password">
-        <button id="login-button" type="submit">Login</button>
+        <button id="Register-button" type="submit">Register</button>
     </form>
-    <a href="register.html">Register Page</a>
-    <script src="to-do-list/login.js"></script>
+    <a href="index.html">Login Page</a>
+    <script src="to-do-list/register.js"></script>
 </body>
 </html>
