new with css not included color pick and design

--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Login Page</h1>
+    <div class="login">
 
-    <form id="loginForm">
-        <input type="text" id="username" placeholder="enter username">
-        <input type="password" id="password" placeholder="Enter password">
-        <button id="login-button" type="submit">Login</button>
-    </form>
-    <a href="register.html">Register Page</a>
+        <form id="loginForm">
+            <h1>Login Page</h1>
+            <ul>
+            <li><input type="text" id="username" placeholder="enter username"></li>
+            <li><input type="password" id="password" placeholder="Enter password"></li>
+            <li><button id="login-button" type="submit">Login</button></li>
+            </ul>
+            <a href="register.html">Register Page</a>
+        </form>
+    </div>
     <script src="to-do-list/login.js"></script>
 </body>
 </html>
