--- a/register.html
+++ b/register.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style_register.css">
 </head>
 <body>
-    <h1>Register page</h1>
-
-    <form id="registerForm">
-        <input type="text" id="username" placeholder="enter username">
-        <input type="password" id="password" placeholder="Enter password">
-        <button id="Register-button" type="submit">Register</button>
-    </form>
-    <a href="index.html">Login Page</a>
+    <div class="register">
+        <form id="registerForm">
+            <h1>Register page</h1>
+            <ul>
+                <li><input type="text" id="username" placeholder="enter username"></li>
+                <li><input type="password" id="password" placeholder="Enter password"></li>
+                <li><button id="Register-button" type="submit">Register</button></li>
+            </ul>
+            <a href="index.html">Login Page</a>
+        </form>
+    </div>
     <script src="to-do-list/register.js"></script>
 </body>
 </html>
